--- a/lakefile.toml
+++ b/lakefile.toml
@@ -5,6 +5,7 @@ defaultTargets = ["FunctionalProgramming"]
 [[require]]
 name = "mathlib"
 scope = "leanprover-community"
+rev = "v4.22.0"
 
 [[lean_lib]]
 name = "FunctionalProgramming"
